--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,38 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body{
+  background-color: darkgrey;
+  display: flex;
+  justify-content: center;
+}
+.list{
+  list-style-type: disc;
+  font-size: 20px;
+  color: white;
+  font-family:  Geneva, Verdana, sans-serif;
+}
+.div_2{
+  width: 280px;
+  
+background-color: black;
+  
+}
+input{
+  padding: 7px;
+  width: 200px;
+  box-shadow: 5px 5px 5px gray;
+}
+button{
+  font-size: 20px;
+}
+.btn{
+  position: absolute;
+  left: 825px;
+  
+
+}
+.btn1{
+  position: absolute;
+  left: 900px;
+  
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
